@@ -46,7 +46,7 @@ public class AuthDataLoadService implements CommandLineRunner {
                 //菜单
                 String code = "code";
                 String $manager = "$manager";
-                Integer open = new Integer(EruptMenu.OPEN);
+                Integer open = Integer.valueOf(EruptMenu.OPEN);
                 EruptMenu eruptMenu = eruptDao.persistIfNotExist(EruptMenu.class, new EruptMenu($manager, "系统管理", null, 1, 0, "fa fa-cogs", null)
                         , code, $manager);
                 eruptDao.persistIfNotExist(EruptMenu.class, new EruptMenu(
